@@ -1,6 +1,8 @@
 v1.6 XW 28-07-2019
 changed: start point to AI/AI
 updated: Zero Java code
+improved: run.sh
+added: console out put at atomicvariable
 
 v1.5 XW 26-07-2019
 fixed: loads multiple times (issue #5)
